--- a/julianne.html
+++ b/julianne.html
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "An Interview with Julianne"
+title: julianne
+permalink: /julianne/
 date:   2016-05-10
 comments: true
 ---
