--- a/store.html
+++ b/store.html
@@ -27,78 +27,94 @@ permalink: /store/
 
 <hr class="clean">
 
-  <form action="/your-charge-code" method="POST" id="payment-form">
-    <div class="fdetails">
-      <span class="fdetails">Name:</span>
-      <input type="text" name="name" id="name" value=" "/>
-    </div>
-    <div class="fdetails">
-      <span>Street: </span>
-      <input type="text" name="street" id="street" value=" "/>
-      <span>City: </span>
-      <input type="text" name="city" id="city" value=" "/>
-    </div>
-    <div class="fdetails">
-      <span>State: </span>
-      <select class="state" name="state" size="1">
-        <option value="empty">  </option>
-        <option value="AK">AK</option>
-        <option value="AL">AL</option>
-        <option value="AR">AR</option>
-        <option value="AZ">AZ</option>
-        <option value="CA">CA</option>
-        <option value="CO">CO</option>
-        <option value="CT">CT</option>
-        <option value="DC">DC</option>
-        <option value="DE">DE</option>
-        <option value="FL">FL</option>
-        <option value="GA">GA</option>
-        <option value="HI">HI</option>
-        <option value="IA">IA</option>
-        <option value="ID">ID</option>
-        <option value="IL">IL</option>
-        <option value="IN">IN</option>
-        <option value="KS">KS</option>
-        <option value="KY">KY</option>
-        <option value="LA">LA</option>
-        <option value="MA">MA</option>
-        <option value="MD">MD</option>
-        <option value="ME">ME</option>
-        <option value="MI">MI</option>
-        <option value="MN">MN</option>
-        <option value="MO">MO</option>
-        <option value="MS">MS</option>
-        <option value="MT">MT</option>
-        <option value="NC">NC</option>
-        <option value="ND">ND</option>
-        <option value="NE">NE</option>
-        <option value="NH">NH</option>
-        <option value="NJ">NJ</option>
-        <option value="NM">NM</option>
-        <option value="NV">NV</option>
-        <option value="NY">NY</option>
-        <option value="OH">OH</option>
-        <option value="OK">OK</option>
-        <option value="OR">OR</option>
-        <option value="PA">PA</option>
-        <option value="RI">RI</option>
-        <option value="SC">SC</option>
-        <option value="SD">SD</option>
-        <option value="TN">TN</option>
-        <option value="TX">TX</option>
-        <option value="UT">UT</option>
-        <option value="VA">VA</option>
-        <option value="VT">VT</option>
-        <option value="WA">WA</option>
-        <option value="WI">WI</option>
-        <option value="WV">WV</option>
-        <option value="WY">WY</option>
-      </select>
+<form action="/your-charge-code" method="POST" id="payment-form">
+  <div class="fdetails">
+    <span class="fdetails">Name:</span>
+    <input type="text" name="name" id="name" value=" "/>
+  </div>
+  <div class="fdetails">
+    <span>Street: </span>
+    <input type="text" name="street" id="street" value=" "/>
+    <span>City: </span>
+    <input type="text" name="city" id="city" value=" "/>
+  </div>
+  <div class="fdetails">
+    <span>State: </span>
+    <select class="state" name="state" size="1">
+      <option value="empty">  </option>
+      <option value="AK">AK</option>
+      <option value="AL">AL</option>
+      <option value="AR">AR</option>
+      <option value="AZ">AZ</option>
+      <option value="CA">CA</option>
+      <option value="CO">CO</option>
+      <option value="CT">CT</option>
+      <option value="DC">DC</option>
+      <option value="DE">DE</option>
+      <option value="FL">FL</option>
+      <option value="GA">GA</option>
+      <option value="HI">HI</option>
+      <option value="IA">IA</option>
+      <option value="ID">ID</option>
+      <option value="IL">IL</option>
+      <option value="IN">IN</option>
+      <option value="KS">KS</option>
+      <option value="KY">KY</option>
+      <option value="LA">LA</option>
+      <option value="MA">MA</option>
+      <option value="MD">MD</option>
+      <option value="ME">ME</option>
+      <option value="MI">MI</option>
+      <option value="MN">MN</option>
+      <option value="MO">MO</option>
+      <option value="MS">MS</option>
+      <option value="MT">MT</option>
+      <option value="NC">NC</option>
+      <option value="ND">ND</option>
+      <option value="NE">NE</option>
+      <option value="NH">NH</option>
+      <option value="NJ">NJ</option>
+      <option value="NM">NM</option>
+      <option value="NV">NV</option>
+      <option value="NY">NY</option>
+      <option value="OH">OH</option>
+      <option value="OK">OK</option>
+      <option value="OR">OR</option>
+      <option value="PA">PA</option>
+      <option value="RI">RI</option>
+      <option value="SC">SC</option>
+      <option value="SD">SD</option>
+      <option value="TN">TN</option>
+      <option value="TX">TX</option>
+      <option value="UT">UT</option>
+      <option value="VA">VA</option>
+      <option value="VT">VT</option>
+      <option value="WA">WA</option>
+      <option value="WI">WI</option>
+      <option value="WV">WV</option>
+      <option value="WY">WY</option>
+    </select>
 
-          <span>Zip Code: </span>
-          <input type="text" name="zip" id="zip" value=" "/>
-        </div>
-        <hr class="cleanshort">
+        <span>Zip Code: </span>
+        <input type="text" name="zip" id="zip" value=" "/>
+      </div>
+      <hr class="cleanshort">
+  </form>
+  <form action="/your-server-side-code" method="POST">
+  <span class="priceTotal"></span>
+
+  <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_PR31DCusAQcjqWav6HXumHm5"
+    data-amount=""
+    data-name="Colette Taylor"
+    data-description="Widget"
+    data-image="https://s3.amazonaws.com/stripe-uploads/acct_0ddqNn4xKDYBkVnfjJGamerchant-icon-1480558425923-mousebee2.png"
+    data-locale="auto">
+  </script>
+</form>
+        <!--
+
         <span class="payment-errors"></span>
         <div class="f-divide">
           <div class="form-row">
@@ -125,10 +141,10 @@ permalink: /store/
             <input type="text" size="4" data-stripe="cvc" placeholder="•••" required>
           </label>
         </div>
-      </div>
+
       <div class="f-divide">
         <input type="submit" class="submit" value="Submit Payment">
-      </div>
-    </form>
-  </form>
+      </div></div>
+    </form>-->
+
 </div>
